got the text to fit the overlay, spacing issues solved to some extent, badge design replicated as much as possible

--- a/navbar-demo/src/a3Footer.css
+++ b/navbar-demo/src/a3Footer.css
@@ -56,6 +56,7 @@
   flex: 0 0 35%;
   max-width: 35%;
   padding-right: 2rem;
+  text-align: left;
 }
 
 .FooterAdinnLogo {
